--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=tomcat80:home=/Applications/NetBeans/apache-tomcat-8.0.27:b
 j2ee.server.middleware=C:/Program Files/glassfish-4.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=Chrome.INTEGRATED
 user.properties.file=/Users/jessica/Library/Application Support/NetBeans/8.2/build.properties
